More tests. Woking from IDE but not from CLI